# castella

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: castella-skia-release.yml  ci.yml  ios-deps.yml  release.yml
agent/: index.html
animation/: index.html
audio/: index.html
bindings/python/: Cargo.toml  README.md  build_ios.sh  pyproject.toml
bindings/python/.cargo/: config.toml
bindings/python/python/castella_skia/: __init__.py  __init__.pyi
bindings/python/src/: lib.rs
castella/: __init__.py  async_net_image.py  bar_chart.py  box.py  build_owner.py  button.py  canvaskit_painter.py  checkbox.py  color.py  column.py  core.py  datetime_input.py  diff_view.py  file_tree.py  font.py  font_fallback.py  frame.py  glfw_frame.py  image.py  input.py  ios_frame.py  line_chart.py  modal.py  multiline_input.py  multiline_text.py  net_image.py  numpy_image.py  pie_chart.py  progressbar.py  pt_frame.py  pt_painter.py  radio_buttons.py  row.py  rust_skia_painter.py  sdl3_frame.py  sdl_frame.py  skia_painter.py  slider.py  spacer.py  switch.py  (+5 more)
castella-skia/: index.html
castella-skia-core/: Cargo.toml
castella-skia-core/src/: error.rs  font.rs  image.rs  lib.rs  painter.rs  surface.rs  types.rs
castella/a2a/: __init__.py  client.py  server.py  types.py
castella/a2ui/: __init__.py  _factories.py  catalog.py  client.py  compat.py  renderer.py  stream.py  transports.py  types.py
castella/agent/: __init__.py  agent_chat.py  card_view.py  chat.py  hub.py  multi.py  tool_view.py
castella/animation/: __init__.py  animated_state.py  animation.py  easing.py  interpolators.py  scheduler.py  tween.py
castella/audio/: __init__.py  manager.py  protocols.py  state.py
castella/calendar/: __init__.py  day_cell.py  grid.py  header.py  locale.py  month_picker.py  state.py  time_picker.py  utils.py  year_picker.py
castella/chart/: __init__.py  area_chart.py  ascii.py  bar_chart.py  base.py  colormap.py  events.py  gauge_chart.py  heatmap_chart.py  hit_testing.py  line_chart.py  pie_chart.py  scatter_chart.py  stacked_bar_chart.py  theme.py  transform.py
castella/events/: __init__.py  focus.py  gesture.py  keyboard.py  manager.py  pointer.py  shortcuts.py
castella/frame/: __init__.py  base.py  macos_ime.py
castella/graph/: __init__.py  canvas.py  hit_testing.py  layout.py  models.py  theme.py  transform.py
castella/i18n/: __init__.py  catalog.py  loader.py  locale_string.py  manager.py  plural.py
castella/layout/: __init__.py  linear.py
castella/markdown/: __init__.py  code_highlighter.py  code_text_renderer.py  emoji_map.py  math_renderer.py  models.py  parser.py  renderer.py  theme.py
castella/mcp/: __init__.py  introspection.py  registry.py  resources.py  server.py  sse.py  tools.py  types.py  watcher.py
castella/models/: __init__.py  events.py  font.py  geometry.py  style.py
castella/protocols/: __init__.py  painter.py
castella/pycode/: __init__.py  __main__.py  app.py  config.py  theme.py
castella/render/: __init__.py  layout_node.py  node.py
castella/state/: __init__.py  collections.py  observers.py  reactive.py
castella/studio/: __init__.py
castella/theme/: __init__.py  core.py  manager.py  presets.py  tokens.py
castella/utils/: __init__.py  color.py  keymap.py
castella/wrks/: __init__.py  __main__.py  app.py  config.py
cattt/: canvaskit_painter.py  canvaskit_paragraph.py  color.py  core.py  frame.py  glfw_frame.py  sdl_frame.py  skia_painter.py  web_frame.py
chart/: index.html
component/: index.html
custom-widgets/: index.html
docs/: agent.md  animation.md  audio.md  castella-skia.md  chart.md  custom-widgets.md  environment.md  getting-started.md  hello-world.md  hot-reloading.md  hot-restarting.md  i18n.md  index.md  ios.md  layout.md  license.md  mcp.md  packaging.md  sizing.md  skills.md  state.md  studio.md  style.md  widgets.md  z-index.md
environment/: index.html
examples/: a2a_demo.py  a2ui_demo.py  a2ui_google_agent_demo.py  a2ui_mock_server.py  a2ui_mock_test.py  a2ui_sse_client_demo.py  a2ui_standalone_demo.py  a2ui_streaming_demo.py  agent_chat_a2a_demo.py  agent_chat_demo.py  all_widgets_demo.py  all_widgets_demo_tabs.py  alpha_demo.py  animation_demo.py  animation_simple_test.py  ascii_chart_demo.py  ascii_chart_test.py  audio_player_demo.py  box.html  box.py  button.html  button.py  calc.py  calendar_demo.py  castella-0.2.0-py3-none-any.whl  castella-0.4.0-py3-none-any.whl  chart_debug.py  chart_demo.py  chart_demo_extended.py  charts.py  checkboxes.py  checkboxes_ja.py  clock.py  column.html  column.py  copy_and_paste.py  counter.html  counter.py  counter_with_custom_state.py  counter_with_lock.py  (+89 more)
examples/ios_all_widgets_demo/: LICENSE  build_ios.sh  pyproject.toml
examples/ios_all_widgets_demo/src/castella_all_widgets_demo/: __init__.py  __main__.py
examples/ios_charts_demo/: build_ios.sh  pyproject.toml
examples/ios_charts_demo/src/castella_charts_demo/: __init__.py  __main__.py
examples/ios_test_app/: .gitignore  build_ios.sh  pyproject.toml
examples/ios_test_app/src/castella_ios_test/: __init__.py  __main__.py  app.py  sitecustomize.py
getting-started/: index.html
hello-world/: index.html
hippos/: __init__.py  async_net_image.py  box.py  button.py  column.py  core.py  frame.py  glfw_frame.py  image.py  input.py  multiline_text.py  net_image.py  numpy_image.py  row.py  sdl_frame.py  skia_painter.py  spacer.py  switch.py  text.py  web_frame.py
hot-reloading/: index.html
hot-restarting/: index.html
i18n/: index.html
ios/: index.html
ios-support/: .gitignore  VERSIONS
layout/: index.html
license/: index.html
mcp/: index.html
packaging/: index.html
search/: search_index.json
sizing/: index.html
skills/: index.html
state/: index.html
stateful-component/: index.html
studio/: index.html
style/: index.html
tools/: build_ios.sh  build_pydantic_core_ios.sh  debug_wsl_opengl.py  download_ios_deps.sh  hot_restarter.py
widgets/: index.html
z-index/: index.html
(+227 files in other folders)
