[project]
name = "castella"
version = "0.14.5"
description = "Castella is a pure Python cross-platform UI framework"
authors = [{ name = "Yasushi Itoh", email = "i2y@icloud.com" }]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
readme = "README.md"

requires-python = ">= 3.11"

[project.optional-dependencies]
glfw = [
    "castella-skia>=0.1.4",
    "glfw>=2.7.0",
    "PyOpenGL>=3.1.7",
    "darkdetect>=0.8",
    "pydantic>=2.7.4",
    "markdown-it-py>=3.0.0",
    "mdit-py-plugins>=0.4.0",
    "pygments>=2.17.0",
    "matplotlib>=3.9.0",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
]
sdl = [
    "castella-skia>=0.1.4",
    "pysdl2-dll>=2.30.2",
    "PySDL2>=0.9.16",
    "PyOpenGL>=3.1.7",
    "darkdetect>=0.8",
    "pydantic>=2.7.4",
    "markdown-it-py>=3.0.0",
    "mdit-py-plugins>=0.4.0",
    "pygments>=2.17.0",
    "matplotlib>=3.9.0",
]
sdl3 = [
    "castella-skia>=0.1.4",
    "PySDL3>=0.9.10b0",
    "PyOpenGL>=3.1.7",
    "darkdetect>=0.8",
    "pydantic>=2.7.4",
    "markdown-it-py>=3.0.0",
    "mdit-py-plugins>=0.4.0",
    "pygments>=2.17.0",
    "matplotlib>=3.9.0",
]
tui = [
    "windows-curses>=2.3.3; sys_platform == 'win32'",
    "prompt-toolkit>=3.0.48",
    "darkdetect>=0.8",
    "pydantic>=2.7.4",
    "pyperclip>=1.9.0",
    "markdown-it-py>=3.0.0",
    "mdit-py-plugins>=0.4.0",
    "pygments>=2.17.0",
]
agent = [
    "python-a2a>=0.5.0",
]
mcp = [
    "mcp>=1.0.0",
]
audio = [
    "pysdl2-dll>=2.30.2",
    "PySDL2>=0.9.16",
    "pydantic>=2.7.4",
]
langgraph_studio = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
]
llamaindex_studio = [
    "llama-index-core>=0.12.0",
]
pydantic_graph_studio = [
    "pydantic-graph>=0.1.0",
]
edda_workflow_manager = [
    "edda-framework[llamaindex]>=0.15.0",
    "llama-index-core>=0.12.0",
]
ios = [
    "rubicon-objc>=0.4.9",
    "pydantic>=2.7.4",
]

[project.urls]
homepage = "https://github.com/i2y/castella"
repository = "https://github.com/i2y/castella"
documentation = "https://i2y.github.io/castella"

[dependency-groups]
dev = [
    "glfw>=2.7.0",
    "PyOpenGL>=3.1.7",
    "pysdl2-dll>=2.30.2",
    "PySDL2>=0.9.16",
    "darkdetect>=0.8",
    "mkdocs>=1.6.0",
    "ruff>=0.8.0",
    "mkdocs-material>=9.5.20",
    "mkdocs-video>=1.5.0",
    "pymdown-extensions>=10.8.1",
    "pydantic>=2.7.4",
    "matplotlib>=3.9.0",
    "markdown-it-py>=3.0.0",
    "mdit-py-plugins>=0.4.0",
    "pygments>=2.17.0",
    "pillow>=10.0.0",
    "windows-curses>=2.3.3; sys_platform == 'win32'",
    "prompt-toolkit>=3.0.48",
    "pyperclip>=1.9.0",
    "mcp>=1.0.0",
    "briefcase>=0.3.26",
]

[build-system]
requires = ["hatchling==1.26.3"]
build-backend = "hatchling.build"
