[package]
name = "castella-skia-core"
version = "0.1.4"
edition = "2024"
description = "Core Skia rendering library for Castella UI framework"
license = "MIT"
repository = "https://github.com/i2y/castella"
authors = ["Yasushi Itoh <i2y@icloud.com>"]
keywords = ["gui", "ui", "skia", "graphics", "cross-platform"]
categories = ["graphics", "gui", "rendering"]

[lib]
name = "castella_skia_core"
crate-type = ["rlib"]

# Desktop Linux: OpenGL backend with embedded FreeType for compatibility with older systems
[target.'cfg(all(target_os = "linux", not(any(target_os = "ios", target_os = "android"))))'.dependencies]
skia-safe = { version = "0.91", features = ["gl", "textlayout", "embed-freetype"] }
libc = "0.2"

# Desktop macOS/Windows: OpenGL backend (uses Core Text / DirectWrite, no FreeType needed)
[target.'cfg(all(not(target_os = "linux"), not(any(target_os = "ios", target_os = "android"))))'.dependencies]
skia-safe = { version = "0.91", features = ["gl", "textlayout"] }

# iOS: Metal backend
[target.'cfg(target_os = "ios")'.dependencies]
skia-safe = { version = "0.91", features = ["metal", "textlayout"] }
metal = "0.29"
objc = "0.2"
core-graphics-types = "0.1"
foreign-types = "0.5"

# Android: Vulkan backend with OpenGL ES fallback
[target.'cfg(target_os = "android")'.dependencies]
skia-safe = { version = "0.91", features = ["vulkan", "gl"] }

[dependencies]
thiserror = "2.0"

[dev-dependencies]
# For testing

[package.metadata.docs.rs]
all-features = true
